@@ -192,6 +192,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - ProvideX               Jeff Wilder
 - PureBasic              Gustavo Julio Fiorenza
 - Python                 Roberto Rossi
+- Python for S60         Sohan Basak
 - PyCon                  Benny Baumann
 - q/kdb+                 Ian Roddis
 - R / S+                 Ron Fredericks, Fernando H.F.P. da Rosa
