@@ -23,6 +23,7 @@ Version 1.0.8.11
      * Nagios (Albéric de Pertat)
      * Octave (Carnë Draug, Juan Pablo Carbajal)
      * PARI/GP (Charles R Greathouse IV)
+     * Python for S60 (Sohan Basak)
      * Rexx (Jon Wolfers)
      * SPARK (Phil Thornley)
      * SPARQL (Karima Rafes)
